[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_measure"
description = "PyTorch-native measurement science toolkit: IRT, CAT, psychometric metrics, and factor models for AI evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = "AIMS Foundations"},
]
keywords = [
    "pytorch",
    "irt",
    "item-response-theory",
    "psychometrics",
    "measurement",
    "evaluation",
    "adaptive-testing",
    "benchmarks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.3",
    "pyarrow>=0.12",
    "pyro-ppl>=1.8",
    "huggingface_hub>=0.16",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tueplots>=0.0.14",
    "tabpfn>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "torch_measure[test,docs]",
    "pre-commit",
    "ruff",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints>=1.23",
    "sphinx-copybutton",
    "myst-parser",
]
all = [
    "torch_measure[dev]",
]

[project.urls]
Homepage = "https://github.com/aims-foundations/torch_measure"
Documentation = "https://torch-measure.readthedocs.io"
Repository = "https://github.com/aims-foundations/torch_measure"
Issues = "https://github.com/aims-foundations/torch_measure/issues"

[tool.hatch.publish]
default = "pypi"

[tool.hatch.publish.pypi]
index = "pypi"

[tool.hatch.publish.testpypi]
index = "testpypi"

[tool.hatch.build.targets.wheel]
packages = ["src/torch_measure"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/.vscode",
    "*.pyc",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_file = "src/torch_measure/_version.py"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
format = "ruff format src tests"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
types = "mypy src"
check = [
    "lint",
    "types",
]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=src/torch_measure --cov-report=term-missing --cov-report=html {args:tests}"
cov-xml = "pytest --cov=src/torch_measure --cov-report=xml {args:tests}"
fast = "pytest -m 'not slow and not gpu' {args:tests}"
slow = "pytest -m slow {args:tests}"
gpu = "pytest -m gpu {args:tests}"
verbose = "pytest -vv {args:tests}"
all = [
    "cov",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
features = ["docs"]
detached = false
dependencies = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints>=1.23",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-autobuild",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -W -b html docs docs/_build/html"
serve = "python -m http.server --directory docs/_build/html 8000"
clean = "rm -rf docs/_build"
rebuild = [
    "clean",
    "build",
]
live = "sphinx-autobuild -W -b html docs docs/_build/html --port 8000"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.envs.lint.scripts]
check = [
    "ruff check src tests",
    "ruff format --check src tests",
]
format = [
    "ruff format src tests",
    "ruff check --fix src tests",
]
types = "mypy src"
all = [
    "check",
    "types",
]

[tool.hatch.envs.bench]
features = ["all"]
dependencies = [
    "pytest-benchmark>=4.0",
    "pytest-profiling>=1.7",
]

[tool.hatch.envs.bench.scripts]
run = "pytest tests/benchmarks --benchmark-only {args}"
profile = "pytest tests/benchmarks --profile {args}"

[tool.hatch.envs.ci]
features = ["test"]

[tool.hatch.envs.ci.scripts]
test = "pytest --cov=src/torch_measure --cov-report=xml --junitxml=junit.xml {args:tests}"

[tool.hatch.envs.ci.env-vars]
COVERAGE_CORE = "sysmon"

[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
]
addopts = ["-ra", "--strict-config", "--strict-markers", "--color=yes"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["torch_measure"]

[tool.coverage.run]
source = ["src/torch_measure"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = true
